Addea scrole to review

--- a/learnico.html
+++ b/learnico.html
@@ -275,9 +275,8 @@
                                 </div>
                                 <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
                                 <div class="account">
-                                    <img src="./images/account-1.png" alt="" class="account-image">
-                                    <p class="account-lable">Orlando Diggs</p>
-                                    <p class="account-company">Junior UI Designer, @Company</p>
+                                    <img src="./images/account-1.png" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Orlando Diggs <br><span class="account-company">Junior UI Designer,<br> @Company</span></p>
                                 </div>
                             </div>
                         </div>
@@ -292,9 +291,8 @@
                                 </div>
                                 <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
                                 <div class="account">
-                                    <img src="./images/account-2.png" alt="" class="account-image">
-                                    <p class="account-lable">Mollie Hall</p>
-                                    <p class="account-company">Design System Manager, @Company</p>
+                                    <img src="./images/account-2.png" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Mollie Hall<br><span class="account-company">Design System Manager,<br> @Company</span></p>
                                 </div>
                             </div>
                         </div>
@@ -309,9 +307,24 @@
                                 </div>
                                 <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
                                 <div class="account">
-                                    <img src="./images/account-3.png" alt="" class="account-image">
-                                    <p class="account-lable">Lori Bryson</p>
-                                    <p class="account-company">UX Designer, @Company</p>
+                                    <img src="./images/account-2.png" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Mollie Hall<br><span class="account-company">Design System Manager,<br> @Company</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feedback_card">
+                            <div class="feedback-card_content">
+                                <div class="stars">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                </div>
+                                <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
+                                <div class="account">
+                                    <img src="./images/account-3.png" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Lori Bryson <br><span class="account-company">UX Designer,<br> @Company </span></p>
                                 </div>
                             </div>
                         </div>
