Finished all the chapters of the web-page

--- a/learnico.html
+++ b/learnico.html
@@ -332,8 +332,139 @@
                 </div>
             </div>
         </section>
+        <section class="blog">
+            <div class="main-content main-content-blog">
+                <div class="blog-top">
+                    <p class="lable lable-blog">Blog</p>
+                    <div class="flex-top">
+                        <h2 class="base-title-blog">Our latest posts</h2>
+                        <button class="white-button-blog">View all</button>
+                    </div>
+                </div>
+                <div class="blog-bottom-grid">
+                    <div class="blog-bottom-part">
+                        <img class="blog-img" src="./images/latest_posts_1.png" alt="">
+                        <div class="content-of-part">
+                            <div class="blog-text-content">
+                                <div class="lable-green lable-green-1">
+                                    <p>Freelance</p>
+                                </div>
+                                <h3 class="tittle-card-blog">7 freelance mistakes to avoid</h3>
+                                <p class="base-text-blog">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                            </div>
+                            <div class="arrow-links arrow-links_blog">
+                                <a class="arrow-button" href="#">Learn more</a>
+                                <img src="./images/chevron_right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-bottom-part">
+                        <img class="blog-img" src="./images/latest_posts_2.png" alt="">
+                        <div class="content-of-part">
+                            <div class="blog-text-content">
+                                <div class="lable-green lable-green-2">
+                                    <p>UI/UX Design</p>
+                                </div>
+                                <h3 class="tittle-card-blog">Brand design process explained</h3>
+                                <p class="base-text-blog">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                            </div>
+                            <div class="arrow-links arrow-links_blog">
+                                <a class="arrow-button" href="#">Learn more</a>
+                                <img src="./images/chevron_right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-bottom-part">
+                        <img class="blog-img" src="./images/latest_posts_3.png" alt="">
+                        <div class="content-of-part">
+                            <div class="blog-text-content">
+                                <div class="lable-green lable-green-3">
+                                    <p>Business</p>
+                                </div>
+                                <h3 class="tittle-card-blog">The beginner’s guide to recruiting a Webflow developer</h3>
+                                <p class="base-text-blog">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                            </div>
+                            <div class="arrow-links arrow-links_blog">
+                                <a class="arrow-button" href="#">Learn more</a>
+                                <img src="./images/chevron_right.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="start-learn">
+            <div class="start-learn_main-content">
+                <h2 class="base-title-blog">Start learning today</h2>
+                <p class="base-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                <div class="buttons-learn">
+                    <button class="green-button-learn">Get started</button>
+                    <button class="white-button-learn">Contacts us</button>
+                </div>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="main-content">
+                <div class="footer-top-content">
+                    <div class="top-right-conteiner">
+                        <h4 class="base-tittle-footer-h4">Join our newsletter to stay up to date on features and releases.</h4>
+                        <div class="input-container">
+                            <input id="subscribe-input" name="username" type="text">
+                            <label  class="subscribe-lable" for="subscribe-input">Subscribe</label>   
+                        </div>
+                        <p class="text-under-input">By subscribing you agree to with our <a class="a-under-input" href="#">Privacy Policy</a> and provide consent to receive updates from our company.</p>
+                    </div>
+                    <div class="top-left-container">
+                        <div class="footer-column">
+                            <h4 class="footer-column-tittle">Pages</h4>
+                            <a class="footer-link" href="#">Home</a>
+                            <a class="footer-link" href="#">About</a>
+                            <a class="footer-link" href="#">Contacnt</a>
+                            <a class="footer-link" href="#">Blog</a>
+                            <a class="footer-link" href="#">Courses</a>
+                            <a class="footer-link" href="#">Teachers</a>
+                        </div>
+                        <div class="footer-column">
+                            <h4 class="footer-column-tittle">CMS Pages</h4>
+                            <a class="footer-link" href="#">Blog Post</a>
+                            <a class="footer-link" href="#">Blog Categories</a>
+                            <a class="footer-link" href="#">Courses Single</a>
+                            <a class="footer-link" href="#">Courses Categories</a>
+                            <a class="footer-link" href="#">Product Page</a>
+                            <a class="footer-link" href="#">Product Categories</a>
+                            <a class="footer-link" href="#">Teachers Single</a>
+                            <a class="footer-link" href="#">Episode Single</a>
+                        </div>
+                        <div class="footer-column">
+                            <h4 class="footer-column-tittle">Account Pages</h4>
+                            <a class="footer-link" href="#">Login</a>
+                            <a class="footer-link" href="#">Sign Up</a>
+                            <a class="footer-link" href="#">Forgot Password</a>
+                            <a class="footer-link" href="#">Reset Password</a>
+                            <a class="footer-link" href="#">Email Confirmation</a>
+                        </div>
+                        <div class="footer-column">
+                            <h4 class="footer-column-tittle">Utility Pages</h4>
+                            <a class="footer-link" href="#">Style Guide</a>
+                            <a class="footer-link" href="#">Changelog</a>
+                            <a class="footer-link" href="#">Licenses</a>
+                            <a class="footer-link" href="#">404</a>
+                            <a class="footer-link" href="#">Password</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-line"></div>
+                <div class="footer-bottom-content">
+                    <p class="footer-license">© Learnico by Minimal Square. Powered by Webflow.</p>
+                    <div class="footer-social-networks-icons">
+                        <img src="./images/facebook_logo.png" alt="Facebook logo">
+                        <img src="./images/x_logo.png" alt="Twitter logo">
+                        <img src="./images/intagram-logo.png" alt="Instagam logo">
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 <script src="script.js"></script>
-<!-- type="text/javascript" -->
 </body>
 </html>
