Finished horizontal scrol

--- a/learnico.html
+++ b/learnico.html
@@ -11,27 +11,27 @@
 <body>
     <div class="main-container">
         <section class="start-container">
-            <div class="main-content">
-                <div class="navbar">
-                    <ul class="menu_ul">
-                        <li class="menu_li"><a class="a" href="#">Home</a></li>
-                        <li class="menu_li"><a class="a" href="#">About</a></li>
-                        <li class="menu_li"><a class="a" href="#">Blog</a></li>
-                        <li class="menu_li"><a class="a" href="#">Contact</a></li>
-                        <li class="menu_li"><a class="a" href="#">Courses</a></li>
-                    </ul>
-                    <div class="navbar_buttons">
-                        <div class="search-container">
-                            <img src="./images/search.svg" alt="#">
-                            <a class="a right-menu" href="#">Search</a>
-                        </div>
-                        <div class="cart-container">
-                            <img src="./images/shopping_cart.svg" alt="#">
-                            <a class="a right-menu" href="#">Cart</a>
-                        </div>
-                        <button class="sign-up">Sign Up</button>
+            <div class="navbar">
+                <ul class="menu_ul">
+                    <li data-goto=".platform-container" class="menu_li"><a class="a" href="#">Home</a></li>
+                    <li data-goto=".platform-container" class="menu_li"><a class="a" href="#">About</a></li>
+                    <li data-goto=".blog" class="menu_li"><a class="a" href="#">Blog</a></li>
+                    <li data-goto=".start-learn" class="menu_li"><a class="a" href="#">Contact</a></li>
+                    <li data-goto=".about-courses" class="menu_li"><a class="a" href="#">Courses</a></li>
+                </ul>
+                <div class="navbar_buttons">
+                    <div class="search-container">
+                        <img src="./images/search.svg" alt="#">
+                        <a class="a right-menu" href="#">Search</a>
                     </div>
+                    <div class="cart-container">
+                        <img src="./images/shopping_cart.svg" alt="#">
+                        <a class="a right-menu" href="#">Cart</a>
+                    </div>
+                    <button class="sign-up">Sign Up</button>
                 </div>
+            </div>
+            <div class="main-content">
                 
                 <div class="main-frame">
                     <div class="main-content_content">                    
@@ -274,6 +274,38 @@
                                 <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
                                 <div class="account">
                                     <img src="./images/account-1.png" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Orlando Diggs <br><span class="account-company">Junior UI Designer,<br> @Company</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feedback_card">
+                            <div class="feedback-card_content">
+                                <div class="feedback-stars">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                </div>
+                                <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
+                                <div class="account">
+                                    <img src="./images/black-star.svg" alt="" class="account-image" height="48px">
+                                    <p class="account-lable">Orlando Diggs <br><span class="account-company">Junior UI Designer,<br> @Company</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="feedback_card">
+                            <div class="feedback-card_content">
+                                <div class="feedback-stars">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                    <img src="./images/black-star.svg" alt="black star">
+                                </div>
+                                <div><p class="g-g-part_base-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p></div>
+                                <div class="account">
+                                    <img src="./images/chevron_right.svg" alt="" class="account-image" height="48px">
                                     <p class="account-lable">Orlando Diggs <br><span class="account-company">Junior UI Designer,<br> @Company</span></p>
                                 </div>
                             </div>
