Made main acroll

--- a/learnico.html
+++ b/learnico.html
@@ -13,11 +13,11 @@
         <section class="start-container">
             <div class="navbar">
                 <ul class="menu_ul">
-                    <li data-goto=".platform-container" class="menu_li"><a class="a" href="#">Home</a></li>
-                    <li data-goto=".platform-container" class="menu_li"><a class="a" href="#">About</a></li>
-                    <li data-goto=".blog" class="menu_li"><a class="a" href="#">Blog</a></li>
-                    <li data-goto=".start-learn" class="menu_li"><a class="a" href="#">Contact</a></li>
-                    <li data-goto=".about-courses" class="menu_li"><a class="a" href="#">Courses</a></li>
+                    <li data-goto=".start-container" class="menu_li a">Home</li>
+                    <li data-goto=".platform-container" class="menu_li a">About</li>
+                    <li data-goto=".blog" class="menu_li a">Blog</li>
+                    <li data-goto=".start-learn" class="menu_li a">Contact</li>
+                    <li data-goto=".about-courses" class="menu_li a">Courses</li>
                 </ul>
                 <div class="navbar_buttons">
                     <div class="search-container">
@@ -32,7 +32,6 @@
                 </div>
             </div>
             <div class="main-content">
-                
                 <div class="main-frame">
                     <div class="main-content_content">                    
                         <div class="text-content">
