--- a/learnico.html
+++ b/learnico.html
@@ -22,7 +22,7 @@
                 <div class="navbar_buttons">
                     <div class="search-container">
                         <img src="./images/search.svg" alt="#">
-                        <a class="a right-menu" href="#">Search</a>
+                        <a class="a right-menu search-link" href="#">Search</a>
                     </div>
                     <div class="cart-container">
                         <img src="./images/shopping_cart.svg" alt="#">
